--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <meta name="description" content="The Wedding of Kencta & Anjas">
     <meta property="og:title" content="The Wedding of Kencta & Anjas">
     <meta property="og:description" content="Hi! You’re invited Click the link below to open the full invitation details.">
-    <meta property="og:image" content="https://ulems.my.id/assets/images/bg.webp">
-    <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.webp">
+    <meta property="og:image" content="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
+    <meta property="og:image:secure_url" content="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:alt" content="The Wedding of Kencta & Anjas">
     <meta property="og:image:width" content="980">
     <meta property="og:image:height" content="980">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
-    <meta property="og:url" content="https://ulems.my.id">
+    <meta property="og:url" content="https://andikamar.github.io">
     <meta property="og:site_name" content="The Wedding of Kencta & Anjas">
 
     <!-- Appearance -->
@@ -33,9 +33,9 @@
     <meta name="theme-color" content="#FFFFFF">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="canonical" href="https://ulems.my.id/">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://ulems.my.id/assets/images/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="https://ulems.my.id/assets/images/icon-192x192.png">
+    <link rel="canonical" href="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
+    <link rel="apple-touch-icon" sizes="192x192" href="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
 
     <!-- Preconnect CDN -->
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
