--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
                  <div class="container text-center">
 
                 <div class="frame-box">
+                    <img src="./assets/images/frame_ayat.webp" 
+                    class="frame-img-ayat" 
+                    alt="Frame Ayat">
                     <div class="frame-content">
                         <p class="ayat-text">
                             salah satu tanda kekuasaan Allah adalah
