--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,6 @@
 
                 <!-- Lampu Atas -->
                 <img src="assets/images/frame_lampu.webp" class="lampu-img" alt="Lampu">
-
                 <div class="container position-relative content-wrapper">
 
                     <h2 class="save-date-text">Save The Date</h2>
@@ -573,6 +572,7 @@
                 <!-- End Of Invitation -->
               <section class="ornament-section">
                 <div class="ornament-wrapper">
+                <div class="divider-soft"></div>
 
                     <!-- Frame Pinggir -->
                     <img src="assets/images/frame_lovestory.webp" 
