--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <meta name="theme-color" content="#FFFFFF">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="canonical" href="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
+    <link rel="canonical" href="https://andikamar.github.io/undangan-kencta-anjas/">
     <link rel="icon" type="image/png" sizes="192x192" href="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
     <link rel="apple-touch-icon" sizes="192x192" href="https://andikamar.github.io/undangan-kencta-anjas/assets/images/icon.webp">
 
@@ -311,7 +311,7 @@
                 <div class="divider-soft"></div>
 
                 <!-- Lampu Atas -->
-                <img src="assets/images/frame_lampu.webp" class="lampu-img" alt="Lampu">
+                <img src="./assets/images/frame_lampu.webp" class="lampu-img" alt="Lampu">
                 <div class="container position-relative content-wrapper">
 
                     <h2 class="save-date-text">Save The Date</h2>
@@ -356,7 +356,7 @@
                 </div>
 
                 <!-- Meja Bawah -->
-                <img src="assets/images/frame_meja.webp" class="meja-img" alt="Meja">
+                <img src="./assets/images/frame_meja.webp" class="meja-img" alt="Meja">
 
                 </section>
                 <!-- Love Story -->
@@ -438,15 +438,15 @@
                     <div class="gallery-frame">
 
                 <!-- FOTO SLOT -->
-                <div class="slot s1"><img src="assets/images/foto1.jpeg" onclick="undangan.guest.modal(this)"></div>
-                <div class="slot s2"><img src="assets/images/foto2.jpeg" onclick="undangan.guest.modal(this)"></div>
-                <div class="slot s3"><img src="assets/images/foto3.jpeg" onclick="undangan.guest.modal(this)"></div>
-                <div class="slot s4"><img src="assets/images/foto4.jpeg" onclick="undangan.guest.modal(this)"></div>
-                <div class="slot s5"><img src="assets/images/foto5.jpeg" onclick="undangan.guest.modal(this)"></div>
-                <div class="slot s6"><img src="assets/images/foto6.jpeg" onclick="undangan.guest.modal(this)"></div>
+                <div class="slot s1"><img src="./assets/images/foto1.jpeg" onclick="undangan.guest.modal(this)"></div>
+                <div class="slot s2"><img src="./assets/images/foto2.jpeg" onclick="undangan.guest.modal(this)"></div>
+                <div class="slot s3"><img src="./assets/images/foto3.jpeg" onclick="undangan.guest.modal(this)"></div>
+                <div class="slot s4"><img src="./assets/images/foto4.jpeg" onclick="undangan.guest.modal(this)"></div>
+                <div class="slot s5"><img src="./assets/images/foto5.jpeg" onclick="undangan.guest.modal(this)"></div>
+                <div class="slot s6"><img src="./assets/images/foto6.jpeg" onclick="undangan.guest.modal(this)"></div>
 
                 <!-- FRAME -->
-                <img src="assets/images/frame_galery.webp" class="frame">
+                <img src="./assets/images/frame_galery.webp" class="frame">
 
             </div>
                 </div>
@@ -575,13 +575,13 @@
                 <div class="divider-soft"></div>
 
                     <!-- Frame Pinggir -->
-                    <img src="assets/images/frame_lovestory.webp" 
+                    <img src="./assets/images/frame_lovestory.webp" 
                         class="frame-outer" 
                         alt="Frame Ornamen">
 
                     <!-- Frame Cermin -->
                     <div class="mirror-wrapper">
-                        <img src="assets/images/frame-pink.webp" 
+                        <img src="./assets/images/frame-pink.webp" 
                             class="frame-mirror" 
                             alt="Frame Cermin">
 
