--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta property="og:locale" content="id_ID">
     <meta property="og:url" content="https://andikamar.github.io">
     <meta property="og:site_name" content="The Wedding of Kencta & Anjas">
+    <meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
     <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
