--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
      ">
 
     <h2 class="font-esthetic mb-4"
-        style="font-size: 2rem; color: #6B8E6B; letter-spacing: 1px;">
+        style="font-size: 32px; color: #6B8E6B; letter-spacing: 1px;">
         Kencta &amp; Anjas
     </h2>
 
     <p class="m-0"
-       style="font-size: 1rem; color: #6B8E6B;">
+       style="font-size: 16px; color: #6B8E6B;">
        Sabtu, 28 Maret 2026
     </p>
 
@@ -141,7 +141,7 @@
                 <section id="home" class="bg-light-dark position-relative overflow-hidden p-0 m-0">
 
                     <div class="position-relative text-center bg-overlay-auto" style="background-color: unset;">
-                       <h2 class="font-esthetic mb-4" style="font-size: 2.25rem; color: #4E7C59;">Kencta &amp; Anjas</h2>
+                       <h2 class="font-esthetic mb-4" style="font-size: 36px; color: #4E7C59;">Kencta &amp; Anjas</h2>
 
                <div class="frame-wrapper2">
 
@@ -154,7 +154,7 @@
                     </div>
 
 
-                        <button class="btn btn-outline-auto btn-sm shadow rounded-pill px-3 py-1"  style="background-color:#4E7C59; color:white; border:none; font-size: 0.825rem;">
+                        <button class="btn btn-outline-auto btn-sm shadow rounded-pill px-3 py-1"  style="background-color:#4E7C59; color:white; border:none; font-size: 13.2px">
                             <i class="fa-solid fa-calendar-check me-2"></i>Save Google Calendar
                         </button>
 
@@ -165,7 +165,7 @@
         </div>
     </div>
 
-    <p class="pb-4 m-0 text-secondary" style="font-size: 0.825rem;">
+    <p class="pb-4 m-0 text-secondary" style="font-size: 13.2px;">
         Scroll Down
     </p>
 </div>
@@ -205,7 +205,7 @@
                 <!-- Bride -->
             <section class="bg-white-black text-center py-5" id="bride">
                  <div class="divider-soft"></div>
-               <h2 class="font-esthetic mb-4" style="font-size: 2.25rem; color: #4E7C59;"> The Groom &amp; Bride</h2>
+               <h2 class="font-esthetic mb-4" style="font-size: 36px; color: #4E7C59;"> The Groom &amp; Bride</h2>
 
 
                 <div class="container">
@@ -329,7 +329,7 @@
                         C3.8,0,0,3.8,0,8.4c0,9.1,16,20.6,16,20.6s16-11.5,16-20.6C32,3.8,28.2,0,23.6,0z"/>
                         <text x="16" y="18"
                             text-anchor="middle"
-                            font-size="12"
+                            font-size="12px"
                             font-family="Playfair Display"
                             fill="#D8929E">
                             28
@@ -432,7 +432,7 @@
                 <div class="container">
                     <div class="divider-soft"></div>
                 <h2 class="font-esthetic mb-4 text-center"
-                style="font-size: 2.25rem; color: #4E7C59;">
+                style="font-size: 36px; color: #4E7C59;">
                 Our Gallery
             </h2>
 
@@ -487,11 +487,7 @@
                             1234 5678 9123
                         </div>
 
-                        <button class="btn-copy" 
-                            data-copy="123456789123"
-                            onclick="undangan.util.copy(this)">
-                        <i class="fa-regular fa-copy"></i>
-                        </button>
+                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 12px;" data-copy="1234567891234" onclick="undangan.util.copy(this)"><i class="fa-regular fa-copy"></i></button>
                     </div>
                     </div>
 
@@ -504,11 +500,7 @@
                     <div class="rek-number">
                         1234 5678 9123
                     </div>
-                    <button class="btn-copy" 
-                            data-copy="123456789123"
-                           onclick="undangan.util.copy(this)">
-                        <i class="fa-regular fa-copy"></i>
-                        </button>
+                <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 12px;" data-copy="1234567891234" onclick="undangan.util.copy(this)"><i class="fa-regular fa-copy"></i></button>
                 </div>
                     </div>
 
@@ -611,31 +603,31 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#home">
                             <i class="fa-solid fa-house"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Home</span>
+                            <span class="d-block" style="font-size: 11.2px;">Home</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#bride">
                             <i class="fa-solid fa-user-group"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Mempelai</span>
+                            <span class="d-block" style="font-size: 11.2px;">Couple</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#wedding-date">
                             <i class="fa-solid fa-calendar-check"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Tanggal</span>
+                            <span class="d-block" style="font-size: 11.2px;">Date</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#gallery">
                             <i class="fa-solid fa-images"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Galeri</span>
+                            <span class="d-block" style="font-size: 11.2px;">Gallery</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#comment">
                             <i class="fa-solid fa-comments"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Ucapan</span>
+                            <span class="d-block" style="font-size: 11.2px;">RSVP</span>
                         </a>
                     </li>
                 </ul>
@@ -647,7 +639,7 @@
     <div class="loading-page bg-white-black" id="welcome" style="opacity: 0;">
         <div class="d-flex justify-content-center align-items-center vh-100 overflow-y-auto">
             <div class="d-flex flex-column text-center">
-                <h2 class="font-esthetic mb-4" style="font-size: 2.25rem; color: #4E7C59;">Kencta &amp; Anjas</h2>
+                <h2 class="font-esthetic mb-4" style="font-size: 36px; color: #4E7C59;">Kencta &amp; Anjas</h2>
 
                 <div class="frame-wrapper">
                  <h3 class="tanggal-acara">Sabtu, 28 Maret 2026</h3>
@@ -687,7 +679,7 @@
                 <div class="progress" role="progressbar" style="height: 0.5rem;" aria-label="progress bar">
                     <div class="progress-bar" id="progress-bar" style="width: 0%"></div>
                 </div>
-                <small class="d-none mt-1 text-theme-auto" id="progress-info" style="font-size: 0.8rem;">Booting application...</small>
+                <small class="d-none mt-1 text-theme-auto" id="progress-info" style="font-size: 12.8px;">Booting application...</small>
                 <noscript>
                     <small class="mt-1 text-danger">Sorry, this invitation requires javascript to work</small>
                 </noscript>
