--- a/public/index.html
+++ b/public/index.html
@@ -487,7 +487,7 @@
                             1234 5678 9123
                         </div>
 
-                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 12px;" data-copy="1234567891234" onclick="undangan.util.copy(this)"><i class="fa-regular fa-copy"></i></button>
+                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 9px; margin-top: 5px; padding-left: 8px;" data-copy="1234567891234" onclick="undangan.util.copy(this)"><i class="fa-regular fa-copy"></i></button>
                     </div>
                     </div>
 
@@ -500,7 +500,7 @@
                     <div class="rek-number">
                         1234 5678 9123
                     </div>
-                <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 12px;" data-copy="1234567891234" onclick="undangan.util.copy(this)"><i class="fa-regular fa-copy"></i></button>
+                <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 9px; margin-top: 5px; padding-left: 8px;" data-copy="1234567891234" onclick="undangan.util.copy(this)"><i class="fa-regular fa-copy"></i></button>
                 </div>
                     </div>
 
